[workspace]
resolver = "2"

members = [
    "common",
    "ppp",
    "papos",
    "papo-server",
    "papo-config",
    "papo-simulator",
    "papo-flash",
    "papo-factory",
    "papo-updater"
]

default-members = [
    "papos",
    "papo-server",
    "papo-config",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Anatoleo"]
repository = "https://github.com/anatoleoN1/pApO"

[workspace.dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }